--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <ul class="link-list">
           <li>
-              <a href="https://70nny.github.io/project1/">Сауна</a>
+              <a href="https://70nny.github.io/project1/" target="_blank">Сауна</a>
           </li>
       </ul>
       В скоре тут появятся и другие.
