--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
           <li>
               <a href="https://70nny.github.io/project1/" target="_blank">Сауна</a>
           </li>
+        <li>
+              <a href="https://70nny.github.io/clickgame/" target="_blank">Игра кликер</a>
+        </li>
+        <li>
+              <a href="https://70nny.github.io/board/" target="_blank">Доска</a>
+        </li>
+        <li>
+              <a href="https://70nny.github.io/cards/" target="_blank">Слайдер</a>
+        </li>
+        <li>
+              <a href="https://70nny.github.io/Drag-Drop/" target="_blank">Перетащи меня</a>
+        </li>
+        <li>
+              <a href="https://70nny.github.io/slider1/" target="_blank">Карточки</a>
+        </li>
       </ul>
       В скоре тут появятся и другие.
     </div>
