--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     
 
-    <form action="/" class="form">
+    <form action="resum.php" class="form" method="POST">
       <h2>Связаться со мной</h2>
 
       <div class="form-row">
