--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
 
         <div class="form-group">
           <label for="name">Ваше имя:</label>
-          <input type="text" id="name" placeholder="Введите имя">
+          <input type="text" id="name" placeholder="Введите имя" required>
         </div>
 
         <div class="form-group">
           <label for="email">Ваш email:</label>
-          <input type="email" id="email" placeholder="Введите email">
+          <input type="email" id="email" placeholder="Введите email" required>
         </div>
       </div>
 
       <div class="form-group">
         <label for="message">Ваше сообщение:</label>
-        <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+        <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..." required></textarea>
       </div>
 
       <input class="btn" type="submit" value="Отправить!">
