--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     
 
-    <form action="" class="form">
+    <div class="form">
       <h2>Связаться со мной</h2>
 
       <div class="form-row">
@@ -112,8 +112,8 @@
         <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..." required name="msg"></textarea>
       </div>
 
-      <input class="btn" type="submit" value="Отправить!">
-    </form>
+      <div class="btn>Отправить!</div>
+    </div>
     <script>
       let a = document.querySelector('.btn');
       let form = document.querySlelector('.form');
