--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..." required name="msg"></textarea>
       </div>
 
-      <div class="btn>Отправить!</div>
+      <div class="btn">Отправить!</div>
     </div>
     <br>
     <br>
