--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   
                   <script>
       let a = document.querySelector('.btn');
-      let form = document.querySlelector('.form');
+      let form = document.querySelector('.form');
       a.addEventListener('click', () => {
        let name =  document.querySelector('#name').value;
         let email =  document.querySelector('#email').value;
